# bento_beacon

./: .gitignore  .gitmodules  Dockerfile  README.md  dev.Dockerfile  entrypoint.dev.sh  entrypoint.sh  pyproject.toml  requirements.txt  run.bash  run.dev.bash
.github/workflows/: build.yml  lint.yml  test.yml
bento_beacon/: app.py  authz.py  config.py  constants.py  service-info.py  service_info.py
bento_beacon/authz/: access.py  headers.py  middleware.py  utils.py
bento_beacon/config_files/: __init__.py  config.py
bento_beacon/configuration_files/: beaconConfiguration.json  beaconMap.json  endpoints.json
bento_beacon/endpoints/: analyses.py  biosamples.py  cohorts.py  datasets.py  individuals.py  info.py  info_permissions_required.py  info_scoped.py  variants.py
bento_beacon/network/: bento_public_query.py  endpoints.py  network.py  network_beacons.py  network_config.py  utils.py
bento_beacon/network/utils/: filters.py  network_beacons.py
bento_beacon/utils/: authx_utils.py  beacon_mappings.py  beacon_request.py  beacon_response.py  censorship.py  constants.py  exceptions.py  filters.py  gohan_endpoints.py  gohan_utils.py  handover_utils.py  http.py  katsu_endpoints.py  katsu_queries.py  katsu_utils.py  nested_query_utils.py  reference.py  scope.py  search.py  service_manager.py
tests/: conftest.py  test_beacon_network.py  test_routes.py
tests/data/: beacon_network_config.json  service_responses.py
