[tool.poetry]
name = "bento_beacon"
version = "0.21.0"
description = "GA4GH Beacon v2 microservice for the Bento platform"
authors = ["Gordon Krieger <gordon.krieger@mcgill.ca>"]
license = "LGPL-3.0-only"
readme = "README.md"
packages = [{include = "bento_beacon"}]

[tool.poetry.dependencies]
python = "^3.10"
bento-lib = {extras = ["flask"], version = "^13.4.0"}
flask = {extras = ["async"], version = "^3.1.1"}
requests = "^2.32.4"
asyncio = "^3.4.3"
aiohttp = "^3.12.14"
aiocache = "^0.12.3"
aioresponses = "^0.7.7"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.6"
black = "^24.10.0"
pytest = "^8.3.3"
responses = "^0.25.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
