[tool.poetry]
name = "bento_beacon"
version = "0.24.0"
description = "GA4GH Beacon v2 microservice for the Bento platform"
authors = ["Gordon Krieger <gordon.krieger@mcgill.ca>"]
license = "LGPL-3.0-only"
readme = "README.md"
packages = [{include = "bento_beacon"}]

[tool.poetry.dependencies]
python = "^3.12"
bento-lib = {extras = ["flask"], version = "^14.0.0"}
flask = {extras = ["async"], version = "^3.1.2"}
requests = "^2.32.4"
aiohttp = "^3.13.1"
aiocache = "^0.12.3"
aioresponses = "^0.7.8"
werkzeug = "^3.1.4"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.17"
black = "^25.9.0"
pytest = "^8.4.2"
responses = "^0.25.8"
pytest-cov = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
